# register-obstruction

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: evidence-and-limitations.md  methodology.md
examples/: demo.py
results/: classifier_confusion.csv  classifier_validation.csv  direct_vs_pivot.csv  provenance.json
scripts/: check_public_results.py
src/register/: __init__.py  core.py  demo_classifier.py
tests/: test_demo_classifier.py  test_public_results.py
