[project]
name = "register-obstruction"
version = "0.1.0"
description = "Interface + illustrative classifier for honorific-register untranslatability (Bn/Hi). Method + dataset withheld pending publication."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["register"]

[tool.pytest.ini_options]
testpaths = ["tests"]
